# Bachelor-Project-EPFL

./: Cargo.toml  README.md  a.out  adversary1.ll  definitions.c  example  fibonacci.ll  hello_demo.bc  hello_demo.ll  hello_works.ll  output.bc  output.ll
llvm_works_1/: a.out
llvm_works_2/: a.out  hello_works_test_ink.ll  new_hello.rs
src/: LlvmWrapper.rs  a.out  collatz_ink.rs  hello_works.bc  hello_works.ll  hello_world_ink.rs  main.rs  multAdd_ink.rs  new_hello.rs  translator.rs  wat_to_llvm_translate.rs
src/lib/: adversary1.c  adversary1.wasm  adversary2.c  adversary2.wasm  branches_opti.wasm  branches_opti_short.wasm  branches_opti_shorter.wasm  branches_shorter.ll  collatz.wasm  collatz_opti.wasm  fibonacci.c  fibonacci.wasm  fibonacci.wat  fibonacci_c.wasm  fibonacci_c_opti.wasm  heapsort.wasm  hello.wasm  hello2.wasm  hello_cargo.wasm  hello_puts.c  hello_puts.wasm  hello_wat.txt  simplest_branch.wasm  simplest_branch_nonOpti.wasm  write_std.c
src/myProgram.dSYM/Contents/Resources/DWARF/: myProgram
